--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,7 @@
     --text-color: #641a17;
     --navbar-shallow-color: #e1e0c0;
     --menu-mobile-background-color: #e1e0c0;
+    --nuka-quantum-color:#2a1b56;
 }
 
 
