--- a/css/nav.css
+++ b/css/nav.css
@@ -1,5 +1,4 @@
 .topheader{ 
-    box-shadow: 0 4px 5px var(--primary-color);
     position: fixed;
     background-color: var(--primary-color);
     left: 0;
@@ -96,7 +95,7 @@
        top: 0;
        width: 100%;
        align-items: center;
-       background-color: var(--theme-color);
+       background-color: var(--primary-color);
        height: 100%;
        overflow-y: auto;
 
@@ -110,7 +109,7 @@
     }
     
     .menu a{
-        color: var(--text-color);
+        color: var(--secondary-color);
         line-height: 70px;
         font-size: 25px;
         
