--- a/css/main.css
+++ b/css/main.css
@@ -7,6 +7,7 @@
     --navbar-shallow-color: #e1e0c0;
     --menu-mobile-background-color: #e1e0c0;
     --nuka-quantum-color:#2a1b56;
+    --nuka-victory-color:#e17a24ff;
 }
 
 
