--- a/css/victory.css
+++ b/css/victory.css
@@ -15,18 +15,18 @@
     display: flex;
 }
 
-.quantum-img-section{
+.victory-img-section{
     position: relative;
     padding: 20px;
 }
 
-.quantum-img{
+.victory-img{
     width: 100%;
     max-width: 550px;
     border-radius: 20%;
 }
 
-.projects-title{
+.victory-title{
     text-align: center;
     font-family: 'Lobster';
     font-weight: bold;
@@ -35,7 +35,7 @@
     color: var(--secondary-color);
 }
 
-.quantum-details{
+.victory-details{
     font-size: 18px;
     font-weight: bold;
     line-height: 1.7;
@@ -43,33 +43,21 @@
     margin: 20px auto;
 }
 
-.project-name{
-    text-align: center;
-    font-weight: bold;
-}
 
-.project-name span{
-    font-family: 'Lobster';
-}
 
-.project-name span:hover{
-    filter: drop-shadow(0 0 14px var(--text-color-inverse));
-    cursor: pointer;
-}
-
-.projects-grid{
+.victory-grid{
     padding: 20px;
     max-width: 500px;
     margin: 0 auto;
 }
 
-.wave-quantum{
+.wave-victory{
     width: 100%;
     position: relative;
     top: 2px;
 }
 
-.wave-quantum-bottom{
+.wave-victory-bottom{
     width: 100%;
     transform: scaleY(-1);
     position: relative;
@@ -77,7 +65,7 @@
 }
 
 @media(min-width:950px){
-    .projects{
+    .nuka-victory-container{
     display: flex;
     flex-direction: column;
     text-align: center;
@@ -85,7 +73,7 @@
 }
 
 
-.projects-title{
+.victory-title{
     text-align: center;
     font-weight: bold;
     font-size: 30px;
@@ -94,7 +82,7 @@
 
 
 
-.projects-grid{
+.victory-grid{
     padding: 20px;
     max-width: 500px;
     margin: 0 auto;
