--- a/css/whatIs.css
+++ b/css/whatIs.css
@@ -4,6 +4,7 @@
 .profile-img {
     width: 50%;
     max-width: 350px;
+    border-radius: 20%;
     
     
 }
@@ -30,7 +31,7 @@
 
 .profile-details{
     font-size: 18px;
-    font-weight: 300;
+    font-weight: bold;
     line-height: 1.3;
     max-width: 450px;
     margin: 20px auto;
